# Dict_Search

./: CMakeLists.txt  README.md
dSearch/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
